--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>Vite App</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
   <script>
     function showNewsContent(id) {
-    // 모든 모달 숨기기
-    const allModals = document.querySelectorAll('.modal');
-    allModals.forEach(modal => {
+      // 모든 모달 숨기기
+      const allModals = document.querySelectorAll('.modal');
+      allModals.forEach(modal => {
         modal.style.display = 'none';
-    });
+      });
 
-    // 모든 카드뉴스 모달 숨기기
-    const allCardModals = document.querySelectorAll('.modal-card-content');
-    allCardModals.forEach(modal => {
+      // 모든 카드뉴스 모달 숨기기
+      const allCardModals = document.querySelectorAll('.modal-card-content');
+      allCardModals.forEach(modal => {
         modal.parentElement.style.display = 'none';
-    });
+      });
 
-    // 해당 모달 표시
-    const selectedModal = document.getElementById(id);
-    if (selectedModal) {
+      // 해당 모달 표시
+      const selectedModal = document.getElementById(id);
+      if (selectedModal) {
         selectedModal.style.display = 'flex';
+      }
     }
-}
 
-// 모달 닫기
-function closeModal(id) {
-    const modal = document.getElementById(id);
-    if (modal) {
+    // 모달 닫기
+    function closeModal(id) {
+      const modal = document.getElementById(id);
+      if (modal) {
         modal.style.display = 'none';
+      }
     }
-}
   </script>
+</body>
 </html>
